# buscador_gui

./: .gitignore  README.md  estrutura.txt  installer.wxs  pyproject.toml
src/buscador_gui/: main.py
src/buscador_gui/ui/: app.py
src/buscador_gui/view/: main_window.py
